@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_nav.html,v 1.20 2009-02-09 21:47:47 guru Exp $      -->
+<!--    $Id: gmt_nav.html,v 1.21 2009-02-13 03:25:24 guru Exp $      -->
 <HEAD>
 <TITLE>The GMT Home Page</TITLE>
 </HEAD>
@@ -23,7 +23,7 @@
   onMouseOut="document.pic4.src='gmt_DOWNLOAD_off.gif'"> <IMG SRC="gmt_DOWNLOAD_off.gif" BORDER=0 NAME="pic4" ALT="Download"></A>
 <BR>
 	
-<A HREF="gmt_services.html" target="view_window" onMouseOver="document.pic5.src='gmt_DOCUMENTATION_on.gif'"
+<A HREF="doc/html/gmt_services.html" target="view_window" onMouseOver="document.pic5.src='gmt_DOCUMENTATION_on.gif'"
   onMouseOut="document.pic5.src='gmt_DOCUMENTATION_off.gif'"> <IMG SRC="gmt_DOCUMENTATION_off.gif" BORDER=0 NAME="pic5" ALT="Documentation"></A>
 <BR>
 	
